--- a/_posts/2019-01-12-【数据可视化】如何选择图表？.md
+++ b/_posts/2019-01-12-【数据可视化】如何选择图表？.md
@@ -11,7 +11,7 @@ tags:
    - 数据可视化
 ---
 
-图表选择指南
+### 图表选择指南
 
 ![img](https://tva1.sinaimg.cn/large/00831rSTgy1gdho2frsl3j313x0hvdj4.jpg)![点击并拖拽以移动](data:image/gif;base64,R0lGODlhAQABAPABAP///wAAACH5BAEKAAAALAAAAAABAAEAAAICRAEAOw==)
 
