--- a/_posts/2020-01-17-【读书总结】《谁说菜鸟不会数据分析》1-4章读书总结.md
+++ b/_posts/2020-01-17-【读书总结】《谁说菜鸟不会数据分析》1-4章读书总结.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      【读书总结】《谁说菜鸟不会数据分析》1-4章读书笔记
+title:      【读书总结】《谁说菜鸟不会数据分析》1-4章读书总结
 subtitle:   
 date:       2020-01-17 01:17:19 
 author:     terese
@@ -9,83 +9,6 @@ catalog:   true
 tags:
     - 读书总结
 ---
-
-
-**目录**
-
-[第一章 数据分析那些事儿](#第一章)
-
-[1、数据分析是什么](#1、数据分析是什么)
-
-[2、数据分析六部曲 P17](#2、数据分析六部曲 P17)
-
-[a. 明确分析思路和目的](#a. 明确分析思路和目的)
-
-[b. 收集数据 P20](#b. 收集数据P20)
-
-[c. 处理数据](#c. 处理数据)
-
-[d. 分析数据](#d. 分析数据)
-
-[e. 数据展现](#e. 数据展现)
-
-[f. 撰写报告](#f. 撰写报告)
-
-[3、数据分析师的职业要求](#3、数据分析师的职业要求)
-
-[4、常用的指标和术语 P32](#4、常用的指标和术语P32)
-
-[5、小结](#5、小结)
-
-[第二章 结构为王——确定分析思路](#第二章 结构为王——确定分析思路)
-
-[1、常用的数据分析方法论 P40](#1、常用的数据分析方法论)
-
-[a. PEST分析法](#a. PEST分析法)
-
-[b. 5W2H分析法](#b. 5W2H分析法)
-
-[c. 逻辑树分析法](#c. 逻辑树分析法)
-
-[c. 4P营销理论](#c. 4P营销理论)
-
-[d. 用户行为理论](#d. 用户行为理论)
-
-[第三章 数据准备](#第三章 数据准备)
-
-[1、理解数据](#1、理解数据)
-
-[2、数据来源](#2、数据来源)
-
-[第四章 数据处理](#第四章 数据处理)
-
-[1、何为数据处理](#1、何为数据处理)
-
-[a. “三心二意”处理数据](#a. “三心二意”处理数据)
-
-[b. 数据处理的内容](#b. 数据处理的内容)
-
-[2、数据清洗](#2、数据清洗)
-
-[a. 重复数据处理](#a. 重复数据处理)
-
-[b. 缺失值处理](#b. 缺失值处理)
-
-[c. 检查数据逻辑错误](#c. 检查数据逻辑错误)
-
-[3、数据加工 P82](#3、数据加工 P82)
-
-[a. 数据抽取](#a. 数据抽取)
-
-[b. 数据计算](#b. 数据计算)
-
-[c. 数据分组](#c. 数据分组)
-
-[d. 数据转换](#d. 数据转换)
-
-[4、数据抽样](#4、数据抽样)
-
-------
 
 # 第一章 数据分析那些事儿
 
