--- a/_posts/2020-01-23-【读书总结】《谁说菜鸟不会数据分析》5-8章读书总结.md
+++ b/_posts/2020-01-23-【读书总结】《谁说菜鸟不会数据分析》5-8章读书总结.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      【读书总结】《谁说菜鸟不会数据分析》5-8章读书笔记
+title:      【读书总结】《谁说菜鸟不会数据分析》5-8章读书总结
 subtitle:   
 date:       2020-01-23 9:14:41 
 author:     terese
@@ -9,126 +9,6 @@ catalog:   true
 tags:
     - 读书总结
 ---
-
-**目录**
-
-[第五章 数据分析](#第五章 数据分析)
-
-[1、数据分析方法](#1、数据分析方法)
-
-[a. 常用数据分析方法 P101](#a. 常用数据分析方法 P101)
-
-[b. 综合评价分析法](#b. 综合评价分析法)
-
-[c. 杜邦分析法](#c. 杜邦分析法)
-
-[d. 漏斗分析法](#d. 漏斗分析法)
-
-[e. 矩阵关联分析法](#e. 矩阵关联分析法)
-
-[f. 高级数据分析方法](#f. 高级数据分析方法)
-
-[2、数据分析工具](#2、数据分析工具)
-
-[a. 数据透视表](#a. 数据透视表)
-
-[b. 数据透视表技巧](#b. 数据透视表技巧)
-
-[c. 多选题分析](#c. 多选题分析)
-
-[第六章 数据展现](#第六章 数据展现)
-
-[1、揭开图表的真面目](#1、揭开图表的真面目)
-
-[a. 图表的作用](#a. 图表的作用)
-
-[b. 经济适用图表类型](#b. 经济适用图表类型)
-
-[c. 通过关系选择图表](#c. 通过关系选择图表)
-
-[d.图表制作五步法](#d.图表制作五步法)
-
-[2、图表也疯狂](#2、图表也疯狂)
-
-[a.突出显示单元格](#a.突出显示单元格)
-
-[b.项目选取](#b.项目选取)
-
-[c.数据条](#c.数据条)
-
-[d.图标集](#d.图标集)[](#)
-
-[e.迷你图](#e.迷你图)
-
-[3、给图表换装](#3、给图表换装)
-
-[a.平均线图](#a.平均线图)
-
-[b.双坐标图](#b.双坐标图)
-
-[c.竖形折线图](#c.竖形折线图)
-
-[d.瀑布图](#d.瀑布图)
-
-[e.帕累托图](#e.帕累托图)
-
-[f.旋风图](#f.旋风图)
-
-[g.人口金字塔图](#g.人口金字塔图)
-
-[h.漏斗图](#h.漏斗图)
-
-[i.矩阵图（散点图）](#i.矩阵图（散点图）)
-
-[j.发展矩阵图](#j.发展矩阵图)
-
-[k.改进难易矩阵（气泡图）](#k.改进难易矩阵（气泡图）)
-
-[第七章 美化图表](#第七章 美化图表)
-
-[1、别让图表犯错](#1、别让图表犯错)
-
-[a.让图表“五脏俱全”](#a.让图表“五脏俱全”)
-
-[b.要注意的条条框框](#b.要注意的条条框框)
-
-[c.图表会说谎](#c.图表会说谎)
-
-[2、图表美化](#2、图表美化)
-
-[a.图表美化三原则](#a.图表美化三原则)
-
-[b.美化图表的技巧](#b.美化图表的技巧)
-
-[c.图表也好“色”](#c.图表也好“色”)
-
-[3、快速制图](#3、快速制图)
-
-[a.图表模版](#a.图表模版)
-
-[b.快速制图](#b.快速制图)
-
-[c.添加标签小工具](#c.添加标签小工具)
-
-[第八章 专业的报告](#第八章 专业的报告)
-
-[1、初识数据分析报告](#1、初识数据分析报告)
-
-[a.数据分析报告是什么](#a.数据分析报告是什么)
-
-[b.数据分析报告的写作原则](#b.数据分析报告的写作原则)
-
-[c.数据分析报告的作用](#c.数据分析报告的作用)
-
-[d.数据分析报告的种类](#d.数据分析报告的种类)
-
-[2、数据分析报告的结构](#2、数据分析报告的结构)
-
-[3、撰写报告时的注意事项](#3、撰写报告时的注意事项)
-
-[4、报告范例 P236](#4、报告范例 P236)
-
-
 
 # 第五章 数据分析
 
