--- a/_posts/2020-04-03-淘宝用户行为分析及用户价值分析知识点整理.md
+++ b/_posts/2020-04-03-淘宝用户行为分析及用户价值分析知识点整理.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      Taobao用户行为分析及用户价值项目分析笔记
+title:      淘宝用户行为分析及用户价值分析知识点整理
 subtitle:   花了两天时间，终于完成这个项目啦～
 date:       2020-04-03
 author:     terese
 header-img: img/post-1.jpg
 catalog:   true
 tags:
-    - 项目笔记
-    - 数据分析实践
+    - 实践知识点整理
 ---
 
 # 淘宝用户行为分析实践笔记记录
