--- a/_posts/2020-04-04-淘宝用户行为分析思路.md
+++ b/_posts/2020-04-04-淘宝用户行为分析思路.md
@@ -1,14 +1,13 @@
 ---
 layout:     post
-title:      Taobao用户行为分析实践思路
+title:      淘宝用户行为分析实践思路
 subtitle:   2020.4.4致敬英雄，愿逝者安息，愿生者奋发，愿祖国昌盛
 date:       2020-04-04
 author:     terese
 header-img: img/to_hero.jpg
 catalog:   true
 tags:
-    - 项目实践笔记
-    - 致敬抗疫英雄
+    - 数据分析
 ---
 
 
