更新优衣库销售数据分析报告

--- a/_posts/2020-04-06-python可视化分析优衣库销售数据分析报告.md
+++ b/_posts/2020-04-06-python可视化分析优衣库销售数据分析报告.md
@@ -4,7 +4,7 @@ title:      利用python可视化分析优衣库销售数据分析报告
 subtitle:   
 date:       2020-04-06 22:49
 author:     terese
-header-img: img/post-15.jpg
+header-img: img/post-14.jpg
 catalog:   true
 tags:
     - 数据分析项目
@@ -13,7 +13,9 @@ tags:
 
 优衣库是经营休闲、运动服装设计、制造和零售的日本公司，由柳井正创立。定位为“快时尚”的优衣库。目前为全球知名服装品牌之一，除了日本之外目前在全球十七个地区展开业务。线上线下融合营销，反常规O2O模式深得用户心。
 
-### 分析总流程
+
+
+### 分析总思路
 
 **一、定义问题 **
 
@@ -103,9 +105,13 @@ tags:
 
 
 
+### 可视化分析代码
+
+[python可视化分析优衣库销售数据.ipynb](https://www.kesci.com/home/project/share/a02c0994adf49e65)
 
 
-### 数据可视化及分析
+
+### 数据分析报告：
 
 **1.who：顾客群体分布？**
 
