更新淘宝数据分析报告

--- a/_posts/2020-04-03-python淘宝用户行为分析及用户价值分析知识点整理.md
+++ b/_posts/2020-04-03-python淘宝用户行为分析及用户价值分析知识点整理.md
@@ -356,3 +356,135 @@ plt.show()
 ```
 
 ![image-20200402141823430](https://tva1.sinaimg.cn/large/00831rSTgy1gdhm780n6wj30oj0fztaj.jpg)
+
+# 电商常用指标：
+
+![image-20200401141734807](https://tva1.sinaimg.cn/large/00831rSTgy1gdhm7ldb5kj30ee0g6q40.jpg)
+
+![image-20200401141804485](https://tva1.sinaimg.cn/large/00831rSTgy1gdhma7tewaj30b30h1ac7.jpg)
+
+![image-20200401141816766](https://tva1.sinaimg.cn/large/00831rSTgy1gdhm7aoiikj30b10gr3zj.jpg)
+
+## **AARRR漏斗模型**
+
+AARRR分别是指：**获取用户（acquisition）、提高活跃度（activation）、提高留存率（retention）、获取收入变现（revenue）、裂变传播（refer）**。这是产品运营中比较常见的一个模型，结合产品本身的特点以及产品的生命周期位置，来关注不同的数据指标，最终制定不同的运营策略。
+
+![img](https://tva1.sinaimg.cn/large/00831rSTgy1gdhmaseliyj30k00du0t8.jpg)
+
+![img](https://tva1.sinaimg.cn/large/00831rSTgy1gdhmawcs05j30go09pjro.jpg)
+
+## **RFM模型**
+
+参考：https://zhuanlan.zhihu.com/p/80620206
+
+![img](https://tva1.sinaimg.cn/large/00831rSTgy1gdhmall2h6j30hf056acb.jpg)
+
+![img](https://tva1.sinaimg.cn/large/00831rSTgy1gdhmai3vnfj30wy0iqtjy.jpg)
+
+R_S,距离当前日期越近，得分越高，最高5分，最低1分
+
+F_S,交易频率越高，得分越高，最高5分，最低1分
+
+M_S,交易金额越高，得分越高，最高5分，最低1分
+
+RFM三个字母的意思分别是：
+
+R：Recency——客户最近一次交易时间的间隔。R值越大，表示客户交易发生的日期越久；反之，表示客户交易发生的日期越近。
+
+F：Frequency——客户在最近一段时间内交易的次数。F值越大，表示客户交易越频繁；反之，表示客户交易越不活跃。
+
+M：Monetary——客户在最近一段时间内交易的金额。M值越大，表示客户价值越高；反之，表示客户价值越低。
+
+
+
+### 如何提高订单转化率
+
+以下参考：
+
+电商网站通常怎么提高订单转化率？ - 张溪梦 Simon的回答 - 知乎 https://www.zhihu.com/question/19769120/answer/118466835
+
+提高电商网站的订单转化率，我们需要从三个方面入手：商品运营、用户运营及分析用户转化流失原因及对策，前面两个保证网站对用户有吸引力，促进转化，最后的转化流失分析保证流量损失的减少。
+
+**Part 1 | 商品运营：流量优化和品类优化**
+
+导流型品类：利润非常低，但是购买量大、市场需求大，目的在于导流；
+
+高利润型品类：利润率高，希望用户更多购买此类商品；
+
+高转化品类：带量；
+
+未来明星型品类：这是电商平台的潜力股，虽然曝光量很低，但是转化率极高。
+
+明确了商品的品类后，我们就可以针对性地展开运营。
+
+![image-20200408214441858](https://tva1.sinaimg.cn/large/00831rSTgy1gdmp0e1h5oj30mg099782.jpg)
+
+这是新型的波士顿矩阵，横坐标代表商品的曝光量，纵坐标是商品的转化率，图中的每一个圆圈代表一个品类的商品。右上角的商品品类曝光量大、转化率高，是现金流的重要业务；而左上角的商品虽然曝光率非常低，但是转化率极高，属于我们上面提到的未来明星型品类，对于这一类商品，我们在后期的运营中可以增加其曝光量。 
+
+**Part 2 | 怎样进行用户运营？**
+
+精细化运营的情况下，做好用户运营主要从两个角度出发：一是找到用户留存的关键点；二是采取差异化的运营策略，区分不同的用户群体，对不同群体采取差异化的运营方式。
+
+*1. 找到用户增长的“魔法数字”*
+
+留存曲线分成三个周期，开始是震荡期和选择期，经过这两个周期，如果用户能够留下来，就会进入一个相对平稳期。
+
+*2. 差异化的运营策略*
+
+不同用户的活跃度、商品偏好、购买决策阶段都各异，我们需要采取差异化的运营策略。差异化的运营策略主要从3个角度出发：基于用户的活跃度、基于用户对不同商品的偏好、基于用户所处的决策阶段。
+
+基于用户的活跃程度，我们可以将用户大致分成“流失用户”、“低频活跃用户”和“高频活跃用户”。一般情况下，一个用户 30 天甚至更久没有登录你的平台，我们基本可以认为该用户流失了。对于流失客户，是否要考虑采取召回策略。30 天内活跃 10 天以上的高度活跃用户，我们是否可以向其推荐更多精准的商品。 
+
+其次基于用户对不同商品的偏好，我们采用用户分群，将用户区分成“美妆类”、“鞋帽类”、“数码类”、“书籍类”等不同群体，然后精准推送新品。 
+
+最后，基于用户购买决策的不同阶段。一个标准的购买流程，先后经历“首页浏览/搜索——浏览商品详情页——商品对比——加入购物车——支付成功”等几个环节，用户在每一个节点都处于不同的决策阶段。我们从维度（属性数据）和指标（行为数据）出发，对用户分群，如“领取了优惠券，但是未使用”的用户，采取精准的推送。我们从 GrowingIO 提供的 API 导出这些用户的 ID 和属性，然后对接企业内容的 CRM 或者 EDM 进行精准的推送和提醒，刺激用户的转化。
+
+**Part 3 | 电商网站用户转化流失的四大原因和对策**
+
+目前电商产品的设计总体成熟、界面布局类似，我们主要结合用户的使用情况去优化产品。一个购买行为可能有多种转化路径：
+1）首页——商品——订单转化
+2）首页——商品列表——详情页——订单转化
+3）首页——搜索——商品列表——详情页——订单转化
+4）首页——单坑位Banner——活动页——详情页——订单转化
+
+虽然流失原因各不相同，但是主要的流失原因有这样四大类：
+
+1）需求不匹配
+2）产品功能/服务/商品不合预期
+3）交互体验不好
+4）“神秘”原因
+
+*1. 第一类 需求不匹配*
+
+需求不匹配分多种情况，一种是产品能激发用户需求，但是用户没有看到；另一种是产品就是没有满足用户的追求。
+
+如果我们的产品能激发用户的需求，但是用户却没有看到。这时候我们需要让用户在合适的位置看到合适的内容。我们可以通过重点位置数据统计和热图分析网站上用户的点击行为，找到黄金位置，把最合适的内容。
+
+如果用户的需求未被满足，那么就有必要分析一下这部分需求。事实上，有过搜索不到结果经历的用户比你想象得多。我们可以通过统计网站搜索无结果页的搜索词信息，可以知道用户未被满足的具体需求。同时与搜索框搜索次数进行对比，衡量是否针对这部分需求做专门的内容、服务、产品建设。
+
+*2. 第二类 产品功能/服务/商品不合预期*
+
+碰到产品的功能、服务或者商品不符合用户预期的情况，比如用户为何浏览了商品详情却没有购买，可能是因为商品评价有问题，或者商品价格相较于其他家的高了。
+
+对于此类问题，可以分析产品内的各种帮助用户转化的功能是不是没有起到正向作用，例如评论、客服、模块间的导流是否顺畅等等。
+
+*3. 第三类 可用性 & 交互体验问题*
+
+此类问题的表现是为什麽用户注册了一半却放弃了，用户为何进入购买流程后还流失了等等。针对“加入购物车”到“支付成功”的转化率偏低问题，需要排查具体的问题出在哪里。
+
+*4. 第四类 其他“神秘”流失原因*
+
+遇到这部分用户活跃度不低，网站浏览量多，也走完了大部分转化路径（甚至不止一次），但就是没有最终转化，基本在最后一步放弃支付了这种情况，首先我们需要结合访客打通机制，直接进行再运营，个性化精准推荐营销，可以给与更多的优惠等。
+
+![img](https://tva1.sinaimg.cn/large/00831rSTgy1gdmplpexeqj30k004wq30.jpg)
+
+对于客单价过高，用户在这一步犹豫的情况，这时我们需要推一把用户。需要打通用户行为和用户 ID，然后进一步有针对性地运营；比如说对这些用户发一些代金券或者优惠券，刺激转化。
+
+**Part 4 | 总结**
+
+在电商运营中，促进订单的转化率，最重要的在于：
+
+\1.  合理优化电商网站页面，让更多的用户对于内容感兴趣，并且愿意去了解；
+\2. 对不同的用户做精细化运营；
+\3. 针对用户购买流程中的各个转化点进行数据分析，查找问题所在，促进转化。
+
