--- a/_posts/2020-04-04-淘宝用户行为分析及用户价值分析报告.md
+++ b/_posts/2020-04-04-淘宝用户行为分析及用户价值分析报告.md
@@ -100,8 +100,11 @@ tags:
 数据集来源于阿里天池数据竞赛数据集。本数据集是天猫2017年11月25日至2017年12月3日用户消费行为记录抽样，即数据集的每一行表示一条用户行为。本次分析选取了前100万条用户行为记录进行分析（行为包括点击、购买、加购、喜欢）。  
 
 本次分析通过对淘宝用户行为数据进行分析，通过行业的指标对淘宝用户行为进行分析，其中基AARRR漏斗流失分析进行用户行为分析、基于RFM模型进行用户价值情况分析，从而探索淘宝用户的行为模式并得出结论，为以下问题提供解释和改进建议：
+
 1.分析用户消费行为，通过分析常见电商分析指标，确定各个环节的流失率，找到需要改进的环节；
+
 2.研究用户在不同时间尺度下的行为规律，找到用户在不同时间周期下的活跃规律；
+
 3.对用户群体进行分群，对不同价值对用户给出不同对营销建议。
 
 ## 1.基于AARRR模型进行用户行为分析  
@@ -124,7 +127,7 @@ tags:
 
 点击占用户总行为数的89.61%，占行为数据的绝大多数。
 
-用户浏览-购买转化率（商品购买量/浏览量）：2.27%
+用户浏览-购买转化率（商品购买量/浏览量）：2.27%。
 
 用户行为转化率：
 
@@ -138,7 +141,7 @@ tags:
 
 ### （2）独立访客漏斗模型计算  
 
-共9739位用户，付费用户数为6689，用户付费转化率为：68.7%
+共9739位用户，付费用户数为6689，用户付费转化率为68.7%。
 
 ### （3）用户复购率  
 
@@ -302,7 +305,7 @@ item_id
 
 ![image-20200408175704174](https://tva1.sinaimg.cn/large/00831rSTgy1gdmifjb4ttj30cl088dfz.jpg)
 
-进一步地，从散点图可以看出，大部分商品点击量和购买量都比较低，有一定的相关性，同时发现点击量大但购买量小的商品较多，即偏右中的点，存在特殊离群值即浏览量高购买量低、购买量高浏览量低的情况，对这两种情况的商品应该加以关注，寻找原因。对浏览量高购买量低的商品应该重点关注，因为浏览量高购买量低产品消耗了巨大的流量但没有转化，这是一个严重的问题。但是，这里的数据日期是在11.25-12.3日期间的，对这些浏览量高购买量却不高的产品也有可能是为双十二囤货预热，一定程度上这里的数据可以说明用户对这些产品感兴趣，所以应该对这类产品进行部署营销策略，想办法提高转化率。另一方面对购买量高浏览量低的商品增大推广力度，重新考虑宝贝标题、将商品放到合适的位置等操作提高这些商品浏览量。
+进一步地，从散点图可以看出，大部分商品点击量和购买量都比较低，有一定的相关性，同时发现点击量大但购买量小的商品较多，即偏右中的点，存在特殊离群值即浏览量高购买量低、购买量高浏览量低的情况，对这两种情况的商品应该加以关注，寻找原因。对浏览量高购买量低的商品应该重点关注，因为浏览量高购买量低产品消耗了巨大的流量但没有转化，这是一个严重的问题。但是，这里的数据日期是在11.25-12.3日期间的，对这些浏览量高购买量却不高的产品也有可能是为双十二囤货预热，一定程度上这里的数据可以说明用户对这些产品感兴趣，所以应该对这类产品进行部署营销策略，想办法提高转化率。另一方面对购买量高浏览量低的商品加大推广力度，比如通过重新考虑宝贝标题、将商品放到合适的位置等操作提高这些商品浏览量。
 
 ### （4）商品购买转化率分析
 
@@ -362,7 +365,7 @@ item_id
 374553           1     2    1   1                    4.0
 ```
 
-以购买情况和【收藏+加入购物车】转化情况为排序指标，得到品牌点击-（收藏+加入购物车+购买）转化率Top20排行榜。在双十二活动前，这些商品可以作为提高购买转化率的重点关注商品，因为从【收藏+加入购物车】到最终购买流失率更低。这些转化率高的产品很大程度上能够说明在大概率上容易得到客户认可，那么在提高曝光量的同时可以考虑通过客服直接推荐等方式达到最终提高成交量的目的。
+以购买情况和【收藏+加入购物车】转化情况为排序指标，得到品牌点击—【收藏+加入购物车+购买】转化率Top20排行榜。在双十二活动前，这些商品可以作为提高购买转化率的重点关注商品，因为从【收藏+加入购物车】到最终购买流失率更低。这些转化率高的产品很大程度上能够说明在大概率上容易得到客户认可，那么在提高曝光量的同时可以考虑通过客服直接推荐等方式达到最终提高成交量的目的。
 
 ```
 top10潜力商品排行榜
