--- a/_posts/2019-10-10-python3捕获本机网卡IP数据包并解析.md
+++ b/_posts/2019-10-10-python3捕获本机网卡IP数据包并解析.md
@@ -212,11 +212,11 @@ if __name__ == '__main__':
 
 图1为程序运行结果。如图2所示，解析数据包后保存每个IP数据包的IP头的所有域内容在txt文本中，包括：版本号（Version）、IP 报头长度（Header Length）、服务类型（Type of Service）、数据报总长度（Total Length）、标识符（Identifier）、标志（Flags）、片偏移（Fragment Offset）、生存时间（TTL）、协议（Protocol）、头部检验（Header Checksum）、起始和目标地址（Source and Destination Address）、可选项（Options）。
 
-<div align=center><img src='https://tva1.sinaimg.cn/large/00831rSTgy1gdoumkc9hcj309q01jt8s.jpg'</div>  
+<div align=center><img src='https://tva1.sinaimg.cn/large/00831rSTgy1gdoumkc9hcj309q01jt8s.jpg'></div>  
 
 <center>图1 程序运行结果</center>
 
-<div align=center><img src='https://tva1.sinaimg.cn/large/00831rSTgy1gdoumghaxtj30a20axgmv.jpg'</div> 
+<div align=center><img src='https://tva1.sinaimg.cn/large/00831rSTgy1gdoumghaxtj30a20axgmv.jpg'></div> 
 
 <center>图2 保存IP数据包信息的txt文件</center>
 
