--- a/_posts/2020-01-23-【读书总结】《谁说菜鸟不会数据分析》5-8章.md
+++ b/_posts/2020-01-23-【读书总结】《谁说菜鸟不会数据分析》5-8章.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      【读书总结】《谁说菜鸟不会数据分析》5-8章读书总结
+title:      【读书总结】《谁说菜鸟不会数据分析》5-8章
 subtitle:   
 date:       2020-01-23 9:14:41 
 author:     terese
