--- a/_posts/2020-01-25-【读书笔记】《深入浅出数据分析》.md
+++ b/_posts/2020-01-25-【读书笔记】《深入浅出数据分析》.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      【读书笔记】《深入浅出数据分析》读书笔记
+title:      【读书笔记】《深入浅出数据分析》
 subtitle:   
 date:       2019-01-25 23:30:04 
 author:     terese
 header-img: img/post-7.jpg
 catalog:   true
 tags:
-    - 读书笔记
+    - 阅读笔记
 ---
 
 这本书一度没坚持看下去，我不是很喜欢它的图书风格。
