--- a/_posts/2020-01-17-【读书总结】《谁说菜鸟不会数据分析》1-4章.md
+++ b/_posts/2020-01-17-【读书总结】《谁说菜鸟不会数据分析》1-4章.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      【读书总结】《谁说菜鸟不会数据分析》1-4章读书总结
+title:      【读书总结】《谁说菜鸟不会数据分析》1-4章
 subtitle:   
 date:       2020-01-17 01:17:19 
 author:     terese
