--- a/_posts/2020-04-26-【读书笔记】精益数据分析-第二部分.md
+++ b/_posts/2020-04-26-【读书笔记】精益数据分析-第二部分.md
@@ -2,7 +2,7 @@
 layout:     post
 title:     【读书笔记】精益数据分析第二部分
 subtitle:   
-date:       2020-04-21 
+date:       2020-04-26
 author:     terese
 header-img: img/post-9.jpg
 catalog:   true
@@ -13,9 +13,7 @@ tags:
 
 ### 第二部分 找到当前的正确指标
 
-[TOC]
-
-#### 第二部分词云
+#### 第二部分关键词词云
 
 用wordcloud生成第一部分词云，屏蔽了其中的一些词，比如创业、模式、公司、数据分析等
 
