--- a/_posts/2020-05-2-【读书笔记】数据化管理：洞悉零售及电子商务运营.md
+++ b/_posts/2020-05-2-【读书笔记】数据化管理：洞悉零售及电子商务运营.md
@@ -11,15 +11,48 @@ tags:
 typora-copy-images-to: upload
 ---
 
-
-
 #### 数据化管理：洞悉零售及电子商务运营第1-2章读书笔记
 
-#### 词云看关键词
+
+
+### 词云看关键词
 
 用wordcloud生成第一部分词云，屏蔽了其中的一些词。
 
-<img src="/Users/terese/girl.png" alt="girl" style="zoom:150%;" />
+<img src="https://tva1.sinaimg.cn/large/007S8ZIlgy1geel46nlafj30b405k76k.jpg" alt="girl" style="zoom:150%;" />
+
+### 自考问题
+
+1.如何提高自己数据化思维的意识？
+
+包括三个方面：对数据的敏感度、数据化思维意识以及习惯用数据说话，可以从主动和被动两方面来提高
+
+- 主动提高
+
+  - 玩数字游戏
+  - 多看财经类的新闻报道
+  - 学会质疑
+  - 记大数、关键数、异常数等
+
+- 被动提高
+
+  - 培训
+
+  - 做表
+
+    每天做5张表，包括日销售分析表、月销售预测表、商品数据汇总分析表、会员数据汇总分析表、竞争对手数据调查表。
+
+  - 诱惑
+
+    通过自动化模版使人去主动分析。
+
+  - 换岗
+
+2.在数据可视化过程中需要注意的事项有哪些？
+
+3.写数据分析报告的注意事项有哪些？
+
+4.日销售数据的同比原则
 
 ### 第1章 什么是数据化管理
 
@@ -240,35 +273,3 @@ typora-copy-images-to: upload
 
 
 
-### 自考问题
-
-1.如何提高自己数据化思维的意识？
-
-包括三个方面：对数据的敏感度、数据化思维意识以及习惯用数据说话，可以从主动和被动两方面来提高
-
-- 主动提高
-
-  - 玩数字游戏
-  - 多看财经类的新闻报道
-  - 学会质疑
-  - 记大数、关键数、异常数等
-
-- 被动提高
-
-  - 培训
-
-  - 做表
-
-    每天做5张表，包括日销售分析表、月销售预测表、商品数据汇总分析表、会员数据汇总分析表、竞争对手数据调查表。
-
-  - 诱惑
-
-    通过自动化模版使人去主动分析。
-
-  - 换岗
-
-2.在数据可视化过程中需要注意的事项有哪些？
-
-3.写数据分析报告的注意事项有哪些？
-
-4.日销售数据的同比原则
