front-end blog start”

--- a/_posts/2020-04-26-【读书笔记】精益数据分析-第二部分.md
+++ b/_posts/2020-04-26-【读书笔记】精益数据分析-第二部分.md
@@ -15,7 +15,7 @@ tags:
 
 #### 第二部分关键词词云
 
-用wordcloud生成第一部分词云，屏蔽了其中的一些词，比如创业、模式、公司、数据分析等
+用wordcloud生成第二部分词云，屏蔽了其中的一些词，比如创业、模式、公司、数据分析等
 
 <img src="https://tva1.sinaimg.cn/large/007S8ZIlgy1geekcx3n0ej30b405kmyb.jpg" alt="girl" style="zoom:150%;" />
 
