--- a/_posts/2020-05-2-【读书笔记】数据化管理：洞悉零售及电子商务运营第1-2章.md
+++ b/_posts/2020-05-2-【读书笔记】数据化管理：洞悉零售及电子商务运营第1-2章.md
@@ -17,7 +17,7 @@ typora-copy-images-to: upload
 
 ### 词云看关键词
 
-用wordcloud生成第一部分词云，屏蔽了其中的一些词。
+用wordcloud生成第1-2章关键词词云，屏蔽了其中的一些词。
 
 <img src="https://tva1.sinaimg.cn/large/007S8ZIlgy1geel46nlafj30b405k76k.jpg" alt="girl" style="zoom:150%;" />
 
