--- a/Demo/train/2018-05-06.md
+++ b/Demo/train/2018-05-06.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: 一个简单的WEBAPP---列车时刻查询
+title: Demos
 date: 2018-04-22
 categories: 前端
 tags: 前端 WEBAPP 慕课网 jQueryMobile
 author: 牛一 
 subtitle: '一个可以查询列车车次信息的WEBAPP'
+
 cover: 'http://p7kyjkmgh.bkt.clouddn.com/blue-train-dribbble_1x%20%281%29.jpg'
 ---  
 
@@ -22,7 +23,7 @@ cover: 'http://p7kyjkmgh.bkt.clouddn.com/blue-train-dribbble_1x%20%281%29.jpg'
 * 根据车次查询详细信息  
 
 ## 代码 
-已上传到[github]()  
+已上传到[github](https://teresesong.github.io/Demo/train/demos/index.html)  
 点击体验[Live Demo]()  
 
 ## 总结  
@@ -39,7 +40,7 @@ ul 用来承载查询后的车次列表  li 为脚本动态生成
 		'<p>'+ that.find("StartTime").text()+ " - "+ that.find("ArriveTime").text()+'</p>'+
         '<p class="ui-li-aside">用时：'+that.find("UseDate").text()  +'</p>'+
         '</a></li>';  
-```  
+ ```
 table 用来承载车次的详细信息  
 ```javascript
 var tr = $("<tr></tr>");
@@ -50,7 +51,7 @@ var tr = $("<tr></tr>");
 				'<td>'+that.find("StartTime").text() + '</td>' ;
 	tr.html(_html);
 	tbody.append(tr);
-```  
+```
 2. 请求  
 网络请求使用了jQuery中的封装好的Ajax的get方法  
 
@@ -94,7 +95,7 @@ $.get(urlPre+_url,_data,function(data){
         searchBtn.button("option","disabled",false);
     
     }
-```  
+```
 根据车次获取详情  
 ```javascript
 $.get(urlPre+url3,{TrainCode:trainCode},function(data){
@@ -121,7 +122,7 @@ isAjax = false;
 $.mobile.changePage("#detail");
     
 });
-```  
+```
 
 
 
