--- a/Demo/train/2018-05-06.md
+++ b/Demo/train/2018-05-06.md
@@ -1,132 +1,55 @@
 ---
 layout: post
-title: Demos
-date: 2018-04-22
+title: Demo
+date: 2021-03-12
 categories: 前端
-tags: 前端 WEBAPP 慕课网 jQueryMobile
-author: 牛一 
-subtitle: '一个可以查询列车车次信息的WEBAPP'
+tags: 前端 Demo
+author: Terese
+subtitle: '今天也要加油鸭'
 
-cover: 'http://p7kyjkmgh.bkt.clouddn.com/blue-train-dribbble_1x%20%281%29.jpg'
+
 ---  
 
-## 效果图 
+# 练习demo
 
-![Train](http://p7kyjkmgh.bkt.clouddn.com/Train.gif)  
+> 整理了过去练习的demo，来自作业、课程练习、书本项目练习、实习项目。
 
-## 框架  
-* jquery.mobile-1.4.5  
-* jQuery.2.0.0  
+|  #   |                             Demo                             |                           参考源码                           |        备注        |
+| :--: | :----------------------------------------------------------: | :----------------------------------------------------------: | :----------------: |
+|  1   | [Baidu-Ife作业-三种简历](https://teresesong.github.io/homework-baidu_ife/homework5-6/resume.html) | [点击查看](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework5-6) | HTML基础、css3基础 |
+|  2   | [Baidu-Ife作业-学习布局](https://teresesong.github.io/homework-baidu_ife/homework7-8/flex-demo.html) | [点击查看](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework7-8) |      Flex布局      |
+|  3   | [来做一个漂亮的网站](https://teresesong.github.io/homework-baidu_ife/homework9-11/web-demo.html) | [点击查看](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework9-11) |  切图、还原设计稿  |
+|  4   |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
+|      |                                                              |                                                              |                    |
 
-## 效果  
-* 根据出发站和到达站查询车次列表  
-* 根据车次查询详细信息  
+- 
 
-## 代码 
-已上传到[github](https://teresesong.github.io/Demo/train/demos/index.html)  
-点击体验[Live Demo]()  
+### About
 
-## 总结  
-1. 用到了JQ Mobile 的form 、ul 和 table 组件 
-
-form 用来获取用户输入信息  
-
-![form](http://p7kyjkmgh.bkt.clouddn.com/QQ%E6%88%AA%E5%9B%BE20180506215328.png)   
-ul 用来承载查询后的车次列表  li 为脚本动态生成  
- ```javascript
- var _html ='<li><a href="#" data-no = "' + that.find("TrainCode").text()+'">'+
-		'<h2>'+that.find("TrainCode").text()+'</h2>'+
-		'<p>'+ that.find("FirstStation").text() + "-" + that.find("LastStation").text() +'</p>'+
-		'<p>'+ that.find("StartTime").text()+ " - "+ that.find("ArriveTime").text()+'</p>'+
-        '<p class="ui-li-aside">用时：'+that.find("UseDate").text()  +'</p>'+
-        '</a></li>';  
- ```
-table 用来承载车次的详细信息  
-```javascript
-var tr = $("<tr></tr>");
-	var that = $(this);
-			
-	var _html = '<td>'+that.find("TrainStation").text() + '</td>' +
-		        '<td>'+that.find("ArriveTime").text() + '</td>' +
-				'<td>'+that.find("StartTime").text() + '</td>' ;
-	tr.html(_html);
-	tbody.append(tr);
-```
-2. 请求  
-网络请求使用了jQuery中的封装好的Ajax的get方法  
-
-根据出发站到达站获取车次列表  
-```javascript
-$.get(urlPre+_url,_data,function(data){
-    var list = $("#list");
-    var $data = $(data);
-    var timeTables = $data.find("TimeTable");
-    
-    var _arr = [];
-        timeTables.each(function(index,obj){
-        var i = index;
-        var that = $(this);
-        
-        if(that.find("FirstStation").text() == "数据没有被发现"){
-            alert("数据没有被发现!");
-            return false;
-        }
-        
-        
-        var _html ='<li><a href="#" data-no = "' + that.find("TrainCode").text()+'">'+
-            '<h2>'+that.find("TrainCode").text()+'</h2>'+
-            '<p>'+ that.find("FirstStation").text() + "-" + that.find("LastStation").text() +'</p>'+
-            '<p>'+ that.find("StartTime").text()+ " - "+ that.find("ArriveTime").text()+'</p>'+
-            '<p class="ui-li-aside">用时：'+that.find("UseDate").text()  +'</p>'+
-        '</a></li>';
-        
-        _arr.push(_html);
-        
-        });
-        
-        if(_arr.length>0){
-        list.html(_arr.join(""));
-        
-        list.listview("refresh");
-        
-        
-        }
-        $.mobile.loading("hide");
-        searchBtn.button("option","disabled",false);
-    
-    }
-```
-根据车次获取详情  
-```javascript
-$.get(urlPre+url3,{TrainCode:trainCode},function(data){
-    $("#detial").find(".ui-content h2").first().html(trainCode + "次");
-    
-    var tbody = $("#detail").find(".ui-content tbody");
-    tbody.html("");
-    
-    $(data).find("TrainDetailInfo").each(function(index,obj){
-        
-        var tr = $("<tr></tr>");
-        var that = $(this);
-        
-        var _html = '<td>'+that.find("TrainStation").text() + '</td>' +
-                    '<td>'+that.find("ArriveTime").text() + '</td>' +
-                    '<td>'+that.find("StartTime").text() + '</td>' ;
-        tr.html(_html);
-        tbody.append(tr);
-        
-                    
-    });
-$.mobile.loading("hide");
-isAjax = false;
-$.mobile.changePage("#detail");
-    
-});
-```
-
-
-
-
-
-
-
+> 这个仓库最开始是记录我自己跟着慕课网课程写的代码的地方。最近浏览量增长的很快，就整理了一下这个仓库，方便大家查看。
+> 早期跟着课程视频写的代码，绝大部分都已经实现了课程中的效果，但不完全是按照老师的代码写。在保证项目效果的前提下，部分代码稍作修改或增加了自己的思考，用其他方式实现
+> 部分视频课程中代码由于框架升级、依赖更新等原因可能无法正常运行，如果您遇到类似情况请及时反馈给我，我会尽力找到解决办法，持续维护。
