--- a/Demo/2021-03-12-DemoList.md
+++ b/Demo/2021-03-12-DemoList.md
@@ -16,10 +16,10 @@ subtitle: '今天也要加油鸭'
 
 |  #   |                             Demo                             |                           参考源码                           |        备注        |
 | :--: | :----------------------------------------------------------: | :----------------------------------------------------------: | :----------------: |
-|  1   | [Baidu-Ife作业-三种简历](https://teresesong.github.io/homework-baidu_ife/homework5-6/resume.html) | [点击查看](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework5-6) | HTML基础、css3基础 |
-|  2   | [Baidu-Ife作业-学习布局](https://teresesong.github.io/homework-baidu_ife/homework7-8/flex-demo.html) | [点击查看](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework7-8) |      Flex布局      |
-|  3   | [来做一个漂亮的网站](https://teresesong.github.io/homework-baidu_ife/homework9-11/web-demo.html) | [点击查看](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework9-11) |  切图、还原设计稿  |
-|  4   |                                                              |                                                              |                    |
+|  1   | [Baidu-Ife作业-三种简历](https://teresesong.github.io/homework-baidu_ife/homework5-6/resume.html) | [Link](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework5-6) | HTML基础、css3基础 |
+|  2   | [Baidu-Ife作业-学习布局](https://teresesong.github.io/homework-baidu_ife/homework7-8/flex-demo.html) | [Link](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework7-8) |      Flex布局      |
+|  3   | [来做一个漂亮的网站](https://teresesong.github.io/homework-baidu_ife/homework9-11/web-demo.html) | [Link](https://github.com/TereseSong/homework-baidu_ife/tree/master/homework9-11) |  切图、还原设计稿  |
+|  4   | [模仿移动端京东首页](https://teresesong.github.io/Demo/train/web-jd/index.html) | [Link](https://github.com/TereseSong/TereseSong.github.io/tree/master//train/web-jd) |      移动web       |
 |      |                                                              |                                                              |                    |
 |      |                                                              |                                                              |                    |
 |      |                                                              |                                                              |                    |
@@ -46,10 +46,3 @@ subtitle: '今天也要加油鸭'
 |      |                                                              |                                                              |                    |
 |      |                                                              |                                                              |                    |
 
-- 
-
-### About
-
-> 这个仓库最开始是记录我自己跟着慕课网课程写的代码的地方。最近浏览量增长的很快，就整理了一下这个仓库，方便大家查看。
-> 早期跟着课程视频写的代码，绝大部分都已经实现了课程中的效果，但不完全是按照老师的代码写。在保证项目效果的前提下，部分代码稍作修改或增加了自己的思考，用其他方式实现
-> 部分视频课程中代码由于框架升级、依赖更新等原因可能无法正常运行，如果您遇到类似情况请及时反馈给我，我会尽力找到解决办法，持续维护。
