--- a/_posts/2020-05-2-【读书笔记】数据化管理：洞悉零售及电子商务运营.md
+++ b/_posts/2020-05-2-【读书笔记】数据化管理：洞悉零售及电子商务运营.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     【读书笔记】数据化管理：洞悉零售及电子商务运营第1-2章
+title:     【读书笔记】数据化管理：洞悉零售及电子商务运营
 subtitle:   
 date:       2020-05-2 00:04:56
 author:     terese
@@ -11,7 +11,7 @@ tags:
 typora-copy-images-to: upload
 ---
 
-#### 数据化管理：洞悉零售及电子商务运营第1-2章读书笔记
+#### 数据化管理：洞悉零售及电子商务运营读书笔记
 
 
 
@@ -265,7 +265,7 @@ typora-copy-images-to: upload
 
 ![image-20200502233426441](https://tva1.sinaimg.cn/large/007S8ZIlgy1geekgfwsrqj30nz07ajsf.jpg)
 
-#### 2.4　案例及应用——数据化排班（p56）
+#### 
 
 
 
