--- a/_posts/2020-02-18-SQL淘宝用户行为分析.md
+++ b/_posts/2020-02-18-SQL淘宝用户行为分析.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      SQL淘宝用户行为分析流程
+title:      SQL淘宝用户行为分析
 subtitle:   
 date:       2020-02-18
 author:     terese
 header-img: img/post-14.jpg
 catalog:   true
 tags:
-   - 数据分析项目
+   - 实践
 ---
 
 ### 一、定义问题
