--- a/_posts/2020-02-20-SQL淘宝用户分析知识点整理.md
+++ b/_posts/2020-02-20-SQL淘宝用户分析知识点整理.md
@@ -7,7 +7,7 @@ author:     terese
 header-img: img/post-7.jpg
 catalog:   true
 tags:
-    - 实践知识点整理
+    - 实践总结
 ---
 
 通过SQL淘宝用户行为分析项目复习了MySQL相关知识点。记录整理涉及知识点以及报错解决方法如下。
