--- a/_posts/2020-08-04-Liunx常用操作记录（留坑）.md
+++ b/_posts/2020-08-04-Liunx常用操作记录（留坑）.md
@@ -119,3 +119,9 @@ $ sudo ln -s 这里复制上面命令成功运行的前一个路径 /usr/local/b
 ##### Liunx解压
 
 [linux下解压命令大全](https://www.cnblogs.com/eoiioe/archive/2008/09/20/1294681.html)
+
+##### 查看进程、杀死进程、启动进程
+
+ps -ef|grep 进程名
+
+kill －9 [pid]
