--- a/_posts/2020-08-04-Liunx常用操作记录（留坑）.md
+++ b/_posts/2020-08-04-Liunx常用操作记录（留坑）.md
@@ -41,7 +41,7 @@ ctrl-d 不是发送信号，而是表示一个特殊的二进制值，表示 EOF
 
 ##### liunx查看入侵
 
-在一个夜黑风高的晚上，我的云服务器发了条警示告诉我服务器密码被破解了[允悲]，这给我一个教训密码千万要设置得复杂点。然而，我查看history和lastlog没什么异常。所以我看了下教程。
+在一个夜黑风高的晚上，我的云服务器发了条警示告诉我服务器密码被破解了落泪了，这给我一个教训：密码千万要设置得复杂点。然而，我查看history和lastlog没什么异常，由于我不清楚主机是不是还安全，所以我看了下教程。特此记录，并深刻地记住这个教训QAQ
 
 [判断云服务器是否被入侵？](https://linux.cn/article-9116-1.html)
 
@@ -51,7 +51,7 @@ ctrl-d 不是发送信号，而是表示一个特殊的二进制值，表示 EOF
 
 被黑客疑似入侵后，我设置了ssh鉴权登录[允悲]，下图是Filezilla通过ssh key连接服务器传输文件的设置方法。
 
-![image-20210315105913229](/Users/terese/Library/Application Support/typora-user-images/image-20210315105913229.png)
+![image-20210315105913229](https://i.loli.net/2021/03/25/7mt2WJMkbdjVq9E.png)
 
 ##### liunx本地上传文件
 
@@ -125,3 +125,34 @@ $ sudo ln -s 这里复制上面命令成功运行的前一个路径 /usr/local/b
 ps -ef|grep 进程名
 
 kill －9 [pid]
+
+##### Liunx找到端口任务杀死进程
+
+su root //切换到root用户
+
+lsof -i:{端口号}
+
+kill -9 {复制pid}
+
+##### Liunx后台执行命令
+
+touch yy.out
+
+sudo chmod 777 yy.out
+
+sudo nohup 运行命令 & ./ yy.out
+
+查看当前后台运行的命令
+
+**（1）jobs命令**
+
+**（2）ps命令**
+
+ **kill命令：结束进程**
+
+   （1）通过jobs命令查看jobnum，然后执行  kill %jobnum
+
+   （2）通过ps命令查看进程号PID，然后执行  kill %PID
+
+​    如果是前台进程的话，直接执行 Ctrl+c 
+
