--- a/source/_posts/2022-10-7-《拆掉思维里的墙》读书笔记.md
+++ b/source/_posts/2022-10-7-《拆掉思维里的墙》读书笔记.md
@@ -26,7 +26,7 @@ tags:
 
 这本书的序言很好地总结了整本书，这是一本让你意识到心智陷阱的书，并告诉你只有转变心智才能破局。书中的核心思想是自我全责——如果你全然为自己负责，你就有能力改变命运；如果你不担起这个责任，任何方法论的缺陷、环境和基因的不公，都会成为你推责的对象——这样的人生只有抱怨，没法进步。这本书将心智模式的7个问题一个个拆解：怎么看待成功，要不要躺平，如何有安全感，如何活得有趣，怎么做自己，怎么做职业选择，如何理解与家人的冲突，并都给出了转变心智之道。
 
-上图中是我从书中得到的启发，你有这些问题和疑惑吗？如果你也有这些疑惑，强推这本书给你～
+下面是我从书中得到的答案，你有这些问题和疑惑吗？如果你也有这些疑惑，强推这本书给你～
 
 1、一直在找意义要不得，怎么破局迷茫？
 
